Portfolio.css
* {
  padding: 0;
  margin: 0;
  box-sizing: border-box;
  list-style: none;
  scroll-behavior: smooth;
  text-decoration: none;
}

:root {
  --text-color: #f5f5f5;
  --hover-color: #12f7ff;
  --bg-color: #250821;
  --secon-bg-color: #303030;
  --big-font: 2.5rem;
  --normal-font: 2rem;
  --neon-box-shadow: 0 0 0.5rem #12f7ff;
  --h2-font: 3rem;
  --font-neon-text-shadow: 0 0 10px rgba(18, 247, 255, 0.3), 0 0 20px rgba(18, 247, 255, 0.3), 0 0 30px rgba(18, 247, 255, 0.3),
    0 0 40px rgba(18, 247, 255, 0.3), 0 0 70px rgba(18, 247, 255, 0.3), 0 0 80px rgba(18, 247, 255, 0.3), 0 0 100px rgba(18, 247, 255, 0.3),
    0 0 150px rgba(18, 247, 255, 0.3);
}

::-webkit-scrollbar {
  height: 0;
  width: 0.5rem;
}

::-webkit-scrollbar-track {
  background: var(--secon-bg-color);
}

::-webkit-scrollbar-thumb {
  background: var(--hover-color);
  border-radius: 5rem;
}

body {
  font-family: "Poppins", Arial, sans-serif;
  background-color: var(--bg-color);
  color: var(--text-color);
  overflow-x: hidden;
  /* padding-top: 110px; */
}

html {
  /* margin: 0;
  padding: 0; */
  overflow-x: hidden;
}

section {
  scroll-margin-top: 100px;
}

/* Header styles */
header {
  position: fixed;
  top: 0;
  left: 0;
  z-index: 1000;
  border-bottom: 1px solid transparent;
  display: flex;
  align-items: center;
  justify-content: space-between;
  width: 100%;
  padding: 20px 10%;
  /* background-color: #221921; */
}

header.sticky {
  background: var(--bg-color);
  border-bottom: 1px solid var(--secon-bg-color);
  padding: 12px 10%;
}

.photo {
  width: 70px;
  height: 70px;
  border-radius: 50%;
  overflow: hidden;
  border: 2px solid white;
}

.photo img {
  width: 100%; /* Makes the image fill the container */
  height: 100%;
  object-fit: cover; /* Ensures proper cropping */
}

span {
  color: var(--hover-color);
}

.navList {
  display: flex;
}

.navList a {
  display: inline-block;
  color: var(--text-color);
  font-weight: 500;
  padding: 10px 20px;
  animation: slideAnimation 1s ease forwards;
  animation-delay: calc(0.3s * var(--i));
  opacity: 0;
}

.navList a:hover {
  color: var(--hover-color);
  text-shadow: 0 0 10px rgba(18, 247, 255, 0.6), 0 0 20px rgba(18, 247, 255, 0.3), 0 0 30px rgba(18, 247, 255, 0.6), 0 0 40px rgba(18, 247, 255, 0.6),
    0 0 70px rgba(18, 247, 255, 0.6), 0 0 80px rgba(18, 247, 255, 0.6), 0 0 100px rgba(18, 247, 255, 0.6), 0 0 150px rgba(18, 247, 255, 0.6);
}

.navList a.active {
  color: var(--hover-color);
}

#menu-icon {
  font-size: 1.8rem;
  z-index: 1001;
  cursor: pointer;
  margin-left: 25px;
  background: var(--hover-color);
  border-radius: 3px;
  color: var(--secon-bg-color);
  display: none;
}

section {
  padding: 10px 10%;
}

/* Hero section ---------------------------*/

.home {
  min-height: 100vh;
  height: 100%;
  width: 100%;
  display: grid;
  grid-template-columns: repeat(2, 1fr);
  align-items: center;
  grid-gap: 0 4em;
  padding-top: 15px;
}

.home-content {
  max-width: 600px;
}

.home-content h1 {
  font-size: var(--big-font);
  font-weight: 700;
  margin-bottom: 1.5rem;
  margin-top: 0;
  font-size: 3.6rem;
}

.home-content h2 {
  font-size: var(--big-font);
  font-weight: 700;
  margin-bottom: 0.8rem;
  font-size: 2.6rem;
}

.change-text {
  font-size: 1.5rem;
  font-weight: 550;
}

.change-text h3 {
  display: inline-flex;
  margin: 0;
  vertical-align: top;
}

.change-text h3 .word {
  position: absolute;
  display: flex;
  opacity: 0;
}

.change-text h3 .word .letter {
  transform-origin: center center 25px;
}

.change-text h3 .word .letter.out {
  transform: rotateX(90deg);
  transform: 0.32s cubic-bezier(0.6, 0, 0.7, 0.2);
}

.change-text h3 .word .letter.in {
  transition: 0.38s ease;
}

.change-text h3 .word .letter .behind {
  transform: rotateX(-90deg);
}

.home-content p {
  color: #bdbdbd;
  line-height: 1.6;
  margin-top: 1rem;
}

.info-box {
  display: inline-flex;
  justify-content: space-between;
  align-items: center;
  /* width: 400px; */
  /* margin: 1rem 0 2rem; */
  width: 100%;
  max-width: 400px;
  margin: 1rem auto 2rem;
}

.info-box h5 {
  font-weight: 600;
  color: var(--text-color);
  font-size: 1.1rem;
  margin-top: 0.8rem;
}

.info-box span {
  font-size: 0.9rem;
  color: #bdbdbd;
}

.btn-box {
  display: flex;
  justify-content: space-between;
  /* width: 410px; */
  height: 45px;
  padding-right: 0.2rem;
  gap: 2rem;
  width: 100%;
  max-width: 410px;
}

.btn-box .btn {
  display: inline-flex;
  justify-content: center;
  align-items: center;
  width: 150px;
  height: 100%;
  background: var(--hover-color);
  color: var(--bg-color);
  font-size: 1rem;
  letter-spacing: 1px;
  font-weight: 600;
  transition: 0.6s;
  box-shadow: var(--neon-box-shadow);
  border-radius: 5px;
  position: relative;
  overflow: hidden;
  z-index: 1;
  border: 2px solid var(--hover-color);
}

.btn:hover {
  color: var(--hover-color);
}

.btn::before {
  content: "";
  position: absolute;
  top: 0;
  left: 0;
  background: var(--bg-color);
  width: 0;
  height: 100%;
  z-index: -1;
  transition: 0.4s;
}

.btn:hover::before {
  width: 100%;
}

.btn:nth-child(2) {
  background: var(--bg-color);
  color: var(--hover-color);
}
.btn:nth-child(2):hover {
  color: var(--bg-color);
}

.btn:nth-child(2)::before {
  background: var(--hover-color);
}

.social-icons {
  margin-top: 8rem;
  margin-bottom: 1.5rem;
  display: flex;
  justify-content: space-between;
  width: 220px;
  height: 40px;
}

.social-icons a {
  display: inline-flex;
  width: 50px;
  height: 100%;
  justify-content: center;
  align-items: center;
  background: var(--bg-color);
  color: var(--hover-color);
  border: 2px solid var(--hover-color);
  transition: 0.6s;
  box-shadow: 0 0 0.3rem #12f7ff;
  border-radius: 5px;
  position: relative;
  z-index: 1;
  overflow: hidden;
}

.social-icons a i {
  font-size: 1.8rem;
}

.social-icons a:hover {
  color: var(--bg-color);
}
/* ... */

